syntax = "proto3";
package dfinance.vm.v1beta1;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

import "cosmos_proto/cosmos.proto";
import "dvm_proto/common-types.proto";

option go_package = "github.com/dfinance/dstation/x/vm/types";

// MsgExecuteScript defines a SDK message to execute a script with args to VM.
message MsgExecuteScript {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  message ScriptArg {
    option (gogoproto.equal) = false;
    option (gogoproto.goproto_getters) = false;

    types.VMTypeTag type = 1 [
      (gogoproto.moretags) = "yaml:\"type\""
    ];
    bytes value = 2 [
      (gogoproto.moretags) = "yaml:\"value\""
    ];
  }

  // Script sender address
  string signer = 1 [
    (gogoproto.moretags) = "yaml:\"signer\""
  ];

  // Script code
  bytes script = 2 [
    (gogoproto.moretags) = "yaml:\"script\""
  ];

  repeated ScriptArg args = 3 [
    (gogoproto.moretags) = "yaml:\"args\"",
    (gogoproto.nullable) = false
  ];
}

// MsgDeployModule defines a SDK message to deploy a module (contract) to VM.
message MsgDeployModule {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // Script sender address
  string signer = 1 [
    (gogoproto.moretags) = "yaml:\"signer\""
  ];

  // Module code
  repeated bytes modules = 2 [
    (gogoproto.moretags) = "yaml:\"modules\""
  ];
}
